Update .R extensions and load input

--- a/day04/Makefile
+++ b/day04/Makefile
@@ -1,7 +1,7 @@
 .PHONY: run
 run:
-	Rscript src/day04.r
+	Rscript src/day04.R
 
 .PHONY: dependencies
 dependencies:
-	Rscript dependencies.r
+	Rscript dependencies.R
