--- a/day05/package.yaml
+++ b/day05/package.yaml
@@ -12,6 +12,8 @@ description:         Please see the README on GitHub at <https://github.com/fwcd
 
 dependencies:
 - base >= 4.7 && < 5
+- mtl >= 2.2 && < 3
+- vector >= 0.12 && < 1
 
 executables:
   day05:
