Move Java-related challenges into proper packages

--- a/day11/build.gradle
+++ b/day11/build.gradle
@@ -18,5 +18,5 @@ repositories {
 
 application {
     // Define the main class for the application.
-    mainClass = 'day11.App'
+    mainClass = 'dev.fwcd.adventofcode2021.Day11'
 }
