--- a/day02/build.gradle
+++ b/day02/build.gradle
@@ -26,5 +26,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'day02.App'
+    mainClass = 'dev.fwcd.adventofcode2021.Day02'
 }
