--- a/day16/package.json
+++ b/day16/package.json
@@ -4,7 +4,13 @@
   "description": "Day 16 solutions",
   "main": "out/index.js",
   "author": "fwcd",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "start": "node out/index.js"
+  },
   "devDependencies": {
-    "@types/node": "^17.0.0"
+    "@types/node": "^17.0.0",
+    "typescript": "^4.5.4"
   }
 }
