Add basic monadic parser combinators for day 18

--- a/day18/package.json
+++ b/day18/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "fwcd",
   "category": [ "Programming" ],
+  "synopsis": "Day 18 solution",
   "licenseFile": "LICENSE",
   "dependencies": {
   }
