--- a/day19/Makefile
+++ b/day19/Makefile
@@ -1,6 +1,6 @@
 out/day19: src/day19.cpp
 	mkdir -p $(shell dirname $@)
-	$(CXX) -o $@ $<
+	$(CXX) -std=c++11 -o $@ $<
 
 .PHONY: run
 run: out/day19
