--- a/day22/package.json
+++ b/day22/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Day 22 solutions",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js"
   },
